# maid-runner

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .vulture  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MAID_DEVELOPMENT_TODOS.md  MAID_RUNNER_COMPLETION_ROADMAP.md  Makefile  README.md  README_PUBLIC.md  SESSION_LEARNINGS.md  TODO.md  dev_bootstrap.py  generate_snapshot.py  hello.py  maid_runner.py  package-lock.json  package.json  pyproject.toml  snapshot_generator.py  validate_manifest.py
.claude/: AGENTS.md  README.md  hooks.json  manifest.json  settings.json
.cursor/: hooks.json
docs/: ISSUES.md  ROADMAP.md  VIDEO_SERIES_ROADMAP.md  agent-retry-protocol.md  agent-skills.md  ai-compiler-workflow.md  ci-cd-integration.md  coherence-validation.md  dead-code-detection.md  draft-manifest-workflow.md  github-actions.md  maid-philosophy-and-vision.md  maid-serve.md  maid_specs.md  manifest-outcome-records.md  troubleshooting.md  unit-testing-rules.md  validator-plugin-authoring.md
examples/: maid_runner.py
maid_agents/: .gitignore  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  pyproject.toml
maid_agents/.cursor/rules/: unit-testing-rules.mdc
maid_agents/docs/: maid_specs.md  unit-testing-rules.md
maid_agents/examples/: demo_manifest_architect.py
maid_agents/maid_agents/: __init__.py  __version__.py
maid_agents/maid_agents/agents/: __init__.py  base_agent.py  developer.py  manifest_architect.py  refactorer.py  refiner.py  test_designer.py
maid_agents/maid_agents/claude/: cli_wrapper.py
maid_agents/maid_agents/cli/: main.py
maid_agents/maid_agents/config/: settings.py
maid_agents/maid_agents/config/templates/: implementation.txt  manifest_creation.txt  test_generation.txt
maid_agents/maid_agents/core/: context_builder.py  orchestrator.py  validation_runner.py
maid_agents/maid_agents/utils/: logging.py
maid_agents/manifests/: task-001-orchestrator-skeleton.manifest.json  task-002-validation-runner.manifest.json  task-003-context-builder.manifest.json  task-004-claude-cli-wrapper.manifest.json  task-005-base-agent.manifest.json  task-006-manifest-architect.manifest.json  task-007-test-designer.manifest.json  task-008-developer.manifest.json  task-009-refactorer.manifest.json  task-010-planning-loop.manifest.json  task-011-implementation-loop.manifest.json  task-012-cli-interface.manifest.json  task-013-configuration.manifest.json  task-014-prompt-templates.manifest.json  task-015-error-handling.manifest.json  task-016-logging.manifest.json  task-017-refiner-agent.manifest.json
maid_agents/tests/: test_task_001_orchestrator_skeleton.py  test_task_002_validation_runner.py  test_task_003_context_builder.py  test_task_004_claude_cli_wrapper.py  test_task_005_base_agent.py  test_task_006_009_agents.py  test_task_006_manifest_architect.py  test_task_007_test_designer.py  test_task_008_developer.py  test_task_009_refactorer.py  test_task_010_013_integration.py  test_task_010_planning_loop.py  test_task_011_implementation_loop.py  test_task_012_cli_interface.py  test_task_013_configuration.py  test_task_014_016_polish.py  test_task_014_prompt_templates.py  test_task_015_error_handling.py  test_task_016_logging.py  test_task_017_refiner_agent.py
maid_runner/: __init__.py  __version__.py  instruction_payload.py  utils.py  validation_result.py
manifests/: 017-02-characterize-package-export-shapes.manifest.yaml  017-03-preserve-third-party-package-boundary.manifest.yaml  017-06-compiler-backed-required-import-resolution.manifest.yaml  018-01-codex-maid-loop-automation.manifest.yaml  018-02-codex-maid-loop-auto-commit.manifest.yaml  019-01-claude-maid-loop-automation.manifest.yaml  020-01-claude-loop-stream-json-verbose.manifest.yaml  021-01-claude-loop-promoted-draft-deletion.manifest.yaml  022-01-claude-loop-task-event-rendering.manifest.yaml  023-01-maid-loop-selected-draft-scope.manifest.yaml  024-01-maid-loop-commit-packet-completeness.manifest.yaml  024-02-review-readiness-required-import-and-doc-fixes.manifest.yaml  025-01-characterize-angular-typescript-artifacts.manifest.yaml  025-01-restore-batch-behavioral-validation.manifest.yaml  025-02-characterize-angular-required-imports-and-routes.manifest.yaml  025-03-add-angular-component-companion-file-tracking.manifest.yaml  025-04-document-angular-support-boundaries.manifest.yaml  026-01-restore-schema-validation-mode.manifest.yaml  027-02-add-react-wrapped-component-extraction.manifest.yaml  027-03-characterize-react-required-imports-and-testing-library.manifest.yaml  027-04-add-react-snapshot-companion-file-tracking.manifest.yaml  027-05-document-react-support-boundaries.manifest.yaml  028-01-extract-js-ts-import-scanner.manifest.yaml  028-02-extract-validation-test-discovery-and-artifact-collection.manifest.yaml  028-04-extract-implementation-file-validation-step.manifest.yaml  028-05-extract-tsconfig-jsonc-and-path-alias-loader.manifest.yaml  (+459 more)
(+1025 files in other folders)
