[project]
name = "maid-runner"
version = "0.1.0"
description = "Tool-agnostic validation framework for the Manifest-driven AI Development (MAID) methodology. Validates that code artifacts align with declarative manifests."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.25.1",
    "pytest>=8.4.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.13.0",
]
