[project]
name = "maid-runner"
version = "2.17.2"
description = "Tool-agnostic validation framework for the Manifest-driven AI Development (MAID) methodology. Validates that code artifacts align with declarative manifests."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Mamerto Fabian Jr.", email = "mamerto@codefrost.com"}
]
keywords = ["maid", "validation", "ai", "development", "manifest", "tdd", "architecture"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "jsonschema>=4.25.1",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/mamertofabian/maid-runner"
Repository = "https://github.com/mamertofabian/maid-runner"
Issues = "https://github.com/mamertofabian/maid-runner/issues"
Documentation = "https://maid-runner.readthedocs.io/en/latest/"

[project.optional-dependencies]
typescript = [
    "tree-sitter>=0.23.2",
    "tree-sitter-typescript>=0.23.2",
]
svelte = [
    "tree-sitter>=0.23.2",
    "tree-sitter-svelte>=1.0.2",
    "tree-sitter-typescript>=0.23.2",
]
quality = [
    "coverage>=7.0",
]
all = [
    "tree-sitter>=0.23.2",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-svelte>=1.0.2",
    "coverage>=7.0",
]
watch = [
    "watchdog>=6.0.0",
]

[dependency-groups]
docs = [
    "sphinx>=7.4.7",
    "furo>=2024.8.6",
]
dev = [
    "pytest>=8.4.2",
    "black>=25.1.0",
    "ruff>=0.13.0",
    "build>=1.0.0",
    "twine>=5.0.0",
    "watchdog>=6.0.0",
    "pre-commit>=4.0.0",
    "vulture>=2.0",
    "pytest-cov>=7.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "mypy>=1.19.1",
    "types-pyyaml>=6.0.12.20250915",
    "tree-sitter>=0.23.2",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-svelte>=1.0.2",
]

[project.scripts]
maid = "maid_runner.cli.commands._main:main"

[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["maid_runner*"]
exclude = ["tests*", "manifests*", "docs*", "examples*"]

[tool.setuptools.package-data]
maid_runner = ["py.typed", "schemas/*.json", "docs/maid_specs.md", "docs/unit-testing-rules.md", "docs/draft-manifest-workflow.md", "docs/manifest-outcome-records.md", "manifests/drafts/README.md", "claude/manifest.json", "claude/settings.json", "claude/agents/*.md", "claude/skills/*/SKILL.md", "codex/manifest.json", "codex/skills/*/SKILL.md", "codex/skills/*/agents/*.yaml", "cursor/manifest.json", "cursor/hooks.json", "user_skills/claude/*/SKILL.md", "user_skills/codex/*/SKILL.md", "user_skills/codex/*/agents/*.yaml", "core/*.cjs"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]
