[project]
name = "maid-agents"
version = "0.1.0"
description = "Claude Code automation agents for the MAID (Manifest-driven AI Development) methodology"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Mamerto Fabian Jr.", email = "mamerto@codefrost.com"}
]
keywords = ["maid", "automation", "ai", "development", "claude", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "maid-runner>=0.1.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/mamertofabian/maid-runner"
Repository = "https://github.com/mamertofabian/maid-runner"
Issues = "https://github.com/mamertofabian/maid-runner/issues"

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "ruff>=0.13.0",
    "pytest>=8.4.2",
]

[project.scripts]
ccmaid = "maid_agents.cli.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["maid_agents*"]
exclude = ["tests*", "manifests*"]
